# yz-bot

./: .gitignore  README.md  main.py  pyproject.toml
database/: day_lucky.db
modules/: bot.py  caotu.py  day_lucky.py  maimai_img.py  mirror_img.py  some_vocie.py
src/audio/: 51121.m4a
test_py/: test.py
